chore: setup hot reloading

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.5bf2e27d9cae4c0b573f.hot-update.js": "/js/app.5bf2e27d9cae4c0b573f.hot-update.js",
+    "/js/app.74c136d31d18f73b6989.hot-update.js": "/js/app.74c136d31d18f73b6989.hot-update.js",
+    "/js/app.db1c50ebc94c93c536e3.hot-update.js": "/js/app.db1c50ebc94c93c536e3.hot-update.js",
+    "/js/app.5c47027b2aaee2df3fe1.hot-update.js": "/js/app.5c47027b2aaee2df3fe1.hot-update.js"
 }
