WIP: setting up initial table

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,14 @@
     "/js/app.5bf2e27d9cae4c0b573f.hot-update.js": "/js/app.5bf2e27d9cae4c0b573f.hot-update.js",
     "/js/app.74c136d31d18f73b6989.hot-update.js": "/js/app.74c136d31d18f73b6989.hot-update.js",
     "/js/app.db1c50ebc94c93c536e3.hot-update.js": "/js/app.db1c50ebc94c93c536e3.hot-update.js",
-    "/js/app.5c47027b2aaee2df3fe1.hot-update.js": "/js/app.5c47027b2aaee2df3fe1.hot-update.js"
+    "/js/app.5c47027b2aaee2df3fe1.hot-update.js": "/js/app.5c47027b2aaee2df3fe1.hot-update.js",
+    "/js/app.8b188c85fe401f9a0c84.hot-update.js": "/js/app.8b188c85fe401f9a0c84.hot-update.js",
+    "/js/app.3c689e3f12ae97cb15aa.hot-update.js": "/js/app.3c689e3f12ae97cb15aa.hot-update.js",
+    "/js/app.cb9d654839b1bb5c8d41.hot-update.js": "/js/app.cb9d654839b1bb5c8d41.hot-update.js",
+    "/js/app.7663c30a65dc3564da4d.hot-update.js": "/js/app.7663c30a65dc3564da4d.hot-update.js",
+    "/js/app.56236cce8852d38eb0f2.hot-update.js": "/js/app.56236cce8852d38eb0f2.hot-update.js",
+    "/js/app.a353335c26c752c8ca0d.hot-update.js": "/js/app.a353335c26c752c8ca0d.hot-update.js",
+    "/js/app.0f3aa83694b68b4b6b8b.hot-update.js": "/js/app.0f3aa83694b68b4b6b8b.hot-update.js",
+    "/js/app.9ea02f3efab6d3dc359c.hot-update.js": "/js/app.9ea02f3efab6d3dc359c.hot-update.js",
+    "/js/app.7844f84bee9ff5d555e8.hot-update.js": "/js/app.7844f84bee9ff5d555e8.hot-update.js"
 }
