chore: subscriber form up and working

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.82c4b12b1a2a5c26b133.hot-update.js": "/js/app.82c4b12b1a2a5c26b133.hot-update.js",
+    "/js/app.25dd69ac3f56157f532d.hot-update.js": "/js/app.25dd69ac3f56157f532d.hot-update.js",
+    "/js/app.5a55ecbf964e3d35d331.hot-update.js": "/js/app.5a55ecbf964e3d35d331.hot-update.js",
+    "/js/app.358c59507dedde91d7fb.hot-update.js": "/js/app.358c59507dedde91d7fb.hot-update.js"
 }
