chore: reloading subscribers and fieldvalues to the front end

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,12 @@
     "/js/app.82c4b12b1a2a5c26b133.hot-update.js": "/js/app.82c4b12b1a2a5c26b133.hot-update.js",
     "/js/app.25dd69ac3f56157f532d.hot-update.js": "/js/app.25dd69ac3f56157f532d.hot-update.js",
     "/js/app.5a55ecbf964e3d35d331.hot-update.js": "/js/app.5a55ecbf964e3d35d331.hot-update.js",
-    "/js/app.358c59507dedde91d7fb.hot-update.js": "/js/app.358c59507dedde91d7fb.hot-update.js"
+    "/js/app.358c59507dedde91d7fb.hot-update.js": "/js/app.358c59507dedde91d7fb.hot-update.js",
+    "/js/app.2283b3e5b3b72da7b0b0.hot-update.js": "/js/app.2283b3e5b3b72da7b0b0.hot-update.js",
+    "/js/app.05b99568d12a398c2df7.hot-update.js": "/js/app.05b99568d12a398c2df7.hot-update.js",
+    "/js/app.f1441327ff8723461f6d.hot-update.js": "/js/app.f1441327ff8723461f6d.hot-update.js",
+    "/js/app.85a0733d79575aad163f.hot-update.js": "/js/app.85a0733d79575aad163f.hot-update.js",
+    "/js/app.47be72b688fdb6e85195.hot-update.js": "/js/app.47be72b688fdb6e85195.hot-update.js",
+    "/js/app.0521515c988bd8c67cf2.hot-update.js": "/js/app.0521515c988bd8c67cf2.hot-update.js",
+    "/js/app.a60774da4c92bbd79ab8.hot-update.js": "/js/app.a60774da4c92bbd79ab8.hot-update.js"
 }
