chore: added Fields Form front end

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,5 +11,9 @@
     "/js/app.85a0733d79575aad163f.hot-update.js": "/js/app.85a0733d79575aad163f.hot-update.js",
     "/js/app.47be72b688fdb6e85195.hot-update.js": "/js/app.47be72b688fdb6e85195.hot-update.js",
     "/js/app.0521515c988bd8c67cf2.hot-update.js": "/js/app.0521515c988bd8c67cf2.hot-update.js",
-    "/js/app.a60774da4c92bbd79ab8.hot-update.js": "/js/app.a60774da4c92bbd79ab8.hot-update.js"
+    "/js/app.a60774da4c92bbd79ab8.hot-update.js": "/js/app.a60774da4c92bbd79ab8.hot-update.js",
+    "/js/app.1273aef64f2ba326916d.hot-update.js": "/js/app.1273aef64f2ba326916d.hot-update.js",
+    "/js/app.54dd801130e2682232a7.hot-update.js": "/js/app.54dd801130e2682232a7.hot-update.js",
+    "/js/app.32e6a597a7a63bdec5f0.hot-update.js": "/js/app.32e6a597a7a63bdec5f0.hot-update.js",
+    "/js/app.927be337ff312acff62a.hot-update.js": "/js/app.927be337ff312acff62a.hot-update.js"
 }
