fix: field modal bug

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,5 +15,6 @@
     "/js/app.1273aef64f2ba326916d.hot-update.js": "/js/app.1273aef64f2ba326916d.hot-update.js",
     "/js/app.54dd801130e2682232a7.hot-update.js": "/js/app.54dd801130e2682232a7.hot-update.js",
     "/js/app.32e6a597a7a63bdec5f0.hot-update.js": "/js/app.32e6a597a7a63bdec5f0.hot-update.js",
-    "/js/app.927be337ff312acff62a.hot-update.js": "/js/app.927be337ff312acff62a.hot-update.js"
+    "/js/app.927be337ff312acff62a.hot-update.js": "/js/app.927be337ff312acff62a.hot-update.js",
+    "/js/app.b871ee6631254c2c6376.hot-update.js": "/js/app.b871ee6631254c2c6376.hot-update.js"
 }
