chore: finished Fields form

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,5 +16,14 @@
     "/js/app.54dd801130e2682232a7.hot-update.js": "/js/app.54dd801130e2682232a7.hot-update.js",
     "/js/app.32e6a597a7a63bdec5f0.hot-update.js": "/js/app.32e6a597a7a63bdec5f0.hot-update.js",
     "/js/app.927be337ff312acff62a.hot-update.js": "/js/app.927be337ff312acff62a.hot-update.js",
-    "/js/app.b871ee6631254c2c6376.hot-update.js": "/js/app.b871ee6631254c2c6376.hot-update.js"
+    "/js/app.b871ee6631254c2c6376.hot-update.js": "/js/app.b871ee6631254c2c6376.hot-update.js",
+    "/js/app.97972ab50ff75d961ed7.hot-update.js": "/js/app.97972ab50ff75d961ed7.hot-update.js",
+    "/js/app.dcc1dd53bc22d70f169d.hot-update.js": "/js/app.dcc1dd53bc22d70f169d.hot-update.js",
+    "/js/app.085dbed100e5c19051fc.hot-update.js": "/js/app.085dbed100e5c19051fc.hot-update.js",
+    "/js/app.69636590fadd035edec2.hot-update.js": "/js/app.69636590fadd035edec2.hot-update.js",
+    "/js/app.fa447b1d818097966b2b.hot-update.js": "/js/app.fa447b1d818097966b2b.hot-update.js",
+    "/js/app.0dc756038b6e70097c2f.hot-update.js": "/js/app.0dc756038b6e70097c2f.hot-update.js",
+    "/js/app.cd3a57c73685901dcc10.hot-update.js": "/js/app.cd3a57c73685901dcc10.hot-update.js",
+    "/js/app.1f06baea7f1920a14368.hot-update.js": "/js/app.1f06baea7f1920a14368.hot-update.js",
+    "/js/app.2a9478dd4986f49a8114.hot-update.js": "/js/app.2a9478dd4986f49a8114.hot-update.js"
 }
