chore: added subscribers API

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -25,5 +25,27 @@
     "/js/app.0dc756038b6e70097c2f.hot-update.js": "/js/app.0dc756038b6e70097c2f.hot-update.js",
     "/js/app.cd3a57c73685901dcc10.hot-update.js": "/js/app.cd3a57c73685901dcc10.hot-update.js",
     "/js/app.1f06baea7f1920a14368.hot-update.js": "/js/app.1f06baea7f1920a14368.hot-update.js",
-    "/js/app.2a9478dd4986f49a8114.hot-update.js": "/js/app.2a9478dd4986f49a8114.hot-update.js"
+    "/js/app.2a9478dd4986f49a8114.hot-update.js": "/js/app.2a9478dd4986f49a8114.hot-update.js",
+    "/js/app.d1ce43109a939fdfae91.hot-update.js": "/js/app.d1ce43109a939fdfae91.hot-update.js",
+    "/js/app.8c910dc66746a53939e3.hot-update.js": "/js/app.8c910dc66746a53939e3.hot-update.js",
+    "/js/app.8eb4877f3e44e56251da.hot-update.js": "/js/app.8eb4877f3e44e56251da.hot-update.js",
+    "/js/app.a3c37b9e3bd47e690ddb.hot-update.js": "/js/app.a3c37b9e3bd47e690ddb.hot-update.js",
+    "/js/app.890eaf29a520974e8e04.hot-update.js": "/js/app.890eaf29a520974e8e04.hot-update.js",
+    "/js/app.109cd7ad9caf6fcf6797.hot-update.js": "/js/app.109cd7ad9caf6fcf6797.hot-update.js",
+    "/js/app.7f7a743d151975fd33b7.hot-update.js": "/js/app.7f7a743d151975fd33b7.hot-update.js",
+    "/js/app.f48bc52f1ac3e0b9ce13.hot-update.js": "/js/app.f48bc52f1ac3e0b9ce13.hot-update.js",
+    "/js/app.d3bff54a579c90272972.hot-update.js": "/js/app.d3bff54a579c90272972.hot-update.js",
+    "/js/app.a3128ae73086dcb814f8.hot-update.js": "/js/app.a3128ae73086dcb814f8.hot-update.js",
+    "/js/app.33d69b4d5502626a5df7.hot-update.js": "/js/app.33d69b4d5502626a5df7.hot-update.js",
+    "/js/app.05fde8d48c1b0b2d1de0.hot-update.js": "/js/app.05fde8d48c1b0b2d1de0.hot-update.js",
+    "/js/app.d51441b945ce35838e3d.hot-update.js": "/js/app.d51441b945ce35838e3d.hot-update.js",
+    "/js/app.5e5725ee0eaefd3a77a0.hot-update.js": "/js/app.5e5725ee0eaefd3a77a0.hot-update.js",
+    "/js/app.fa670bef3f8f4728eff2.hot-update.js": "/js/app.fa670bef3f8f4728eff2.hot-update.js",
+    "/js/app.149c837f4e07bcc8f234.hot-update.js": "/js/app.149c837f4e07bcc8f234.hot-update.js",
+    "/js/app.bcd7908587e33d694958.hot-update.js": "/js/app.bcd7908587e33d694958.hot-update.js",
+    "/js/app.c7f26c847fb6bbd3779f.hot-update.js": "/js/app.c7f26c847fb6bbd3779f.hot-update.js",
+    "/js/app.f2ed57b376c9e3c24f82.hot-update.js": "/js/app.f2ed57b376c9e3c24f82.hot-update.js",
+    "/js/app.846bb4dd48b50636e159.hot-update.js": "/js/app.846bb4dd48b50636e159.hot-update.js",
+    "/js/app.871fb88fa07266211913.hot-update.js": "/js/app.871fb88fa07266211913.hot-update.js",
+    "/js/app.9d1501006c8b99d04595.hot-update.js": "/js/app.9d1501006c8b99d04595.hot-update.js"
 }
