WIP: converting Blade foreach to VueJS foreach

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -47,5 +47,8 @@
     "/js/app.f2ed57b376c9e3c24f82.hot-update.js": "/js/app.f2ed57b376c9e3c24f82.hot-update.js",
     "/js/app.846bb4dd48b50636e159.hot-update.js": "/js/app.846bb4dd48b50636e159.hot-update.js",
     "/js/app.871fb88fa07266211913.hot-update.js": "/js/app.871fb88fa07266211913.hot-update.js",
-    "/js/app.9d1501006c8b99d04595.hot-update.js": "/js/app.9d1501006c8b99d04595.hot-update.js"
+    "/js/app.9d1501006c8b99d04595.hot-update.js": "/js/app.9d1501006c8b99d04595.hot-update.js",
+    "/js/app.bca7bad477f9c2136dfc.hot-update.js": "/js/app.bca7bad477f9c2136dfc.hot-update.js",
+    "/js/app.b6c7f7151f03acc69737.hot-update.js": "/js/app.b6c7f7151f03acc69737.hot-update.js",
+    "/js/app.22e47ccea5e7fe77c3e9.hot-update.js": "/js/app.22e47ccea5e7fe77c3e9.hot-update.js"
 }
