WIP: converting Blade foreach to VueJS foreach

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -50,5 +50,38 @@
     "/js/app.9d1501006c8b99d04595.hot-update.js": "/js/app.9d1501006c8b99d04595.hot-update.js",
     "/js/app.bca7bad477f9c2136dfc.hot-update.js": "/js/app.bca7bad477f9c2136dfc.hot-update.js",
     "/js/app.b6c7f7151f03acc69737.hot-update.js": "/js/app.b6c7f7151f03acc69737.hot-update.js",
-    "/js/app.22e47ccea5e7fe77c3e9.hot-update.js": "/js/app.22e47ccea5e7fe77c3e9.hot-update.js"
+    "/js/app.22e47ccea5e7fe77c3e9.hot-update.js": "/js/app.22e47ccea5e7fe77c3e9.hot-update.js",
+    "/js/app.33af7a326e3d281f03c1.hot-update.js": "/js/app.33af7a326e3d281f03c1.hot-update.js",
+    "/js/app.922610df3d82e9d7205d.hot-update.js": "/js/app.922610df3d82e9d7205d.hot-update.js",
+    "/js/app.442472469331cfaa6f33.hot-update.js": "/js/app.442472469331cfaa6f33.hot-update.js",
+    "/js/app.b550adc5d198cae4c168.hot-update.js": "/js/app.b550adc5d198cae4c168.hot-update.js",
+    "/js/app.b0ffda0954289906e11f.hot-update.js": "/js/app.b0ffda0954289906e11f.hot-update.js",
+    "/js/app.fde01d19ba9e9cc0c89e.hot-update.js": "/js/app.fde01d19ba9e9cc0c89e.hot-update.js",
+    "/js/app.4f933eef3d3003049a1a.hot-update.js": "/js/app.4f933eef3d3003049a1a.hot-update.js",
+    "/js/app.f7be4da2c14558a19378.hot-update.js": "/js/app.f7be4da2c14558a19378.hot-update.js",
+    "/js/app.f1c85a40515c08443458.hot-update.js": "/js/app.f1c85a40515c08443458.hot-update.js",
+    "/js/app.7866c9d239e26603c808.hot-update.js": "/js/app.7866c9d239e26603c808.hot-update.js",
+    "/js/app.28c40d3d9f8a0fbb73bb.hot-update.js": "/js/app.28c40d3d9f8a0fbb73bb.hot-update.js",
+    "/js/app.2f5be6e739a110321f3c.hot-update.js": "/js/app.2f5be6e739a110321f3c.hot-update.js",
+    "/js/app.cf94285a9b7ecf2839a6.hot-update.js": "/js/app.cf94285a9b7ecf2839a6.hot-update.js",
+    "/js/app.d8afd3d7eea8e2c28e66.hot-update.js": "/js/app.d8afd3d7eea8e2c28e66.hot-update.js",
+    "/js/app.c152f2ea56f446f74e3c.hot-update.js": "/js/app.c152f2ea56f446f74e3c.hot-update.js",
+    "/js/app.724cb9606761c53c18e7.hot-update.js": "/js/app.724cb9606761c53c18e7.hot-update.js",
+    "/js/app.a3300c42956c051e208a.hot-update.js": "/js/app.a3300c42956c051e208a.hot-update.js",
+    "/js/app.dc8358469322f0867715.hot-update.js": "/js/app.dc8358469322f0867715.hot-update.js",
+    "/js/app.8cf9365709e2ad7c4a08.hot-update.js": "/js/app.8cf9365709e2ad7c4a08.hot-update.js",
+    "/js/app.3cb5edae236f7a8cc7b6.hot-update.js": "/js/app.3cb5edae236f7a8cc7b6.hot-update.js",
+    "/js/app.56d9aff7260bb8905d52.hot-update.js": "/js/app.56d9aff7260bb8905d52.hot-update.js",
+    "/js/app.b5f8baf92a9ddeeb8cfd.hot-update.js": "/js/app.b5f8baf92a9ddeeb8cfd.hot-update.js",
+    "/js/app.962b5fe6b0916bb8c13a.hot-update.js": "/js/app.962b5fe6b0916bb8c13a.hot-update.js",
+    "/js/app.52f0341a0d87190bc4c5.hot-update.js": "/js/app.52f0341a0d87190bc4c5.hot-update.js",
+    "/js/app.dfdaf7649b1642738cf4.hot-update.js": "/js/app.dfdaf7649b1642738cf4.hot-update.js",
+    "/js/app.9a67a95c2ceb9b1b68da.hot-update.js": "/js/app.9a67a95c2ceb9b1b68da.hot-update.js",
+    "/js/app.185ed88d2daad2dfb02b.hot-update.js": "/js/app.185ed88d2daad2dfb02b.hot-update.js",
+    "/js/app.b615120e27c806028dbd.hot-update.js": "/js/app.b615120e27c806028dbd.hot-update.js",
+    "/js/app.c6d78c7ed252cbcf0f9f.hot-update.js": "/js/app.c6d78c7ed252cbcf0f9f.hot-update.js",
+    "/js/app.4eb138e9e766c011b4b0.hot-update.js": "/js/app.4eb138e9e766c011b4b0.hot-update.js",
+    "/js/app.a0ce71d4f6200bb0ce49.hot-update.js": "/js/app.a0ce71d4f6200bb0ce49.hot-update.js",
+    "/js/app.644e7a59c6b126cb7297.hot-update.js": "/js/app.644e7a59c6b126cb7297.hot-update.js",
+    "/js/app.c27fe2514cd226e946a0.hot-update.js": "/js/app.c27fe2514cd226e946a0.hot-update.js"
 }
