chore: finished converting Blade foreach to VueJS foreach

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -83,5 +83,27 @@
     "/js/app.4eb138e9e766c011b4b0.hot-update.js": "/js/app.4eb138e9e766c011b4b0.hot-update.js",
     "/js/app.a0ce71d4f6200bb0ce49.hot-update.js": "/js/app.a0ce71d4f6200bb0ce49.hot-update.js",
     "/js/app.644e7a59c6b126cb7297.hot-update.js": "/js/app.644e7a59c6b126cb7297.hot-update.js",
-    "/js/app.c27fe2514cd226e946a0.hot-update.js": "/js/app.c27fe2514cd226e946a0.hot-update.js"
+    "/js/app.c27fe2514cd226e946a0.hot-update.js": "/js/app.c27fe2514cd226e946a0.hot-update.js",
+    "/js/app.68f74ee97c1c8a841432.hot-update.js": "/js/app.68f74ee97c1c8a841432.hot-update.js",
+    "/js/app.c8b7f3c4b5cfdfe2d70f.hot-update.js": "/js/app.c8b7f3c4b5cfdfe2d70f.hot-update.js",
+    "/js/app.7f04339522b5c6928f2c.hot-update.js": "/js/app.7f04339522b5c6928f2c.hot-update.js",
+    "/js/app.c2b19661aa00cdb52836.hot-update.js": "/js/app.c2b19661aa00cdb52836.hot-update.js",
+    "/js/app.176e5bbfb02e19a8482e.hot-update.js": "/js/app.176e5bbfb02e19a8482e.hot-update.js",
+    "/js/app.2897e2a6a95aa74267b9.hot-update.js": "/js/app.2897e2a6a95aa74267b9.hot-update.js",
+    "/js/app.5579e5dd86ef2c247dc8.hot-update.js": "/js/app.5579e5dd86ef2c247dc8.hot-update.js",
+    "/js/app.1ba8690df54ae1b09288.hot-update.js": "/js/app.1ba8690df54ae1b09288.hot-update.js",
+    "/js/app.6d4ccc20a57675d454e1.hot-update.js": "/js/app.6d4ccc20a57675d454e1.hot-update.js",
+    "/js/app.af27b0e483a5264e6657.hot-update.js": "/js/app.af27b0e483a5264e6657.hot-update.js",
+    "/js/app.f290377f29af219ff421.hot-update.js": "/js/app.f290377f29af219ff421.hot-update.js",
+    "/js/app.378625895d41662bdb1e.hot-update.js": "/js/app.378625895d41662bdb1e.hot-update.js",
+    "/js/app.2ba84309482f5bd386b6.hot-update.js": "/js/app.2ba84309482f5bd386b6.hot-update.js",
+    "/js/app.5d640d788d79b28ccdcc.hot-update.js": "/js/app.5d640d788d79b28ccdcc.hot-update.js",
+    "/js/app.056f3a0e5dfd36477a9f.hot-update.js": "/js/app.056f3a0e5dfd36477a9f.hot-update.js",
+    "/js/app.a913b7e1e2cbb13a5648.hot-update.js": "/js/app.a913b7e1e2cbb13a5648.hot-update.js",
+    "/js/app.a90ff52f54f165f5e7de.hot-update.js": "/js/app.a90ff52f54f165f5e7de.hot-update.js",
+    "/js/app.0ca63a802db186ada48f.hot-update.js": "/js/app.0ca63a802db186ada48f.hot-update.js",
+    "/js/app.ed233daf715758011f34.hot-update.js": "/js/app.ed233daf715758011f34.hot-update.js",
+    "/js/app.67fdf64cac41e346ce29.hot-update.js": "/js/app.67fdf64cac41e346ce29.hot-update.js",
+    "/js/app.454e11e92e47002f22be.hot-update.js": "/js/app.454e11e92e47002f22be.hot-update.js",
+    "/js/app.b318a6738aa316cdc684.hot-update.js": "/js/app.b318a6738aa316cdc684.hot-update.js"
 }
