--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -105,5 +105,6 @@
     "/js/app.ed233daf715758011f34.hot-update.js": "/js/app.ed233daf715758011f34.hot-update.js",
     "/js/app.67fdf64cac41e346ce29.hot-update.js": "/js/app.67fdf64cac41e346ce29.hot-update.js",
     "/js/app.454e11e92e47002f22be.hot-update.js": "/js/app.454e11e92e47002f22be.hot-update.js",
-    "/js/app.b318a6738aa316cdc684.hot-update.js": "/js/app.b318a6738aa316cdc684.hot-update.js"
+    "/js/app.b318a6738aa316cdc684.hot-update.js": "/js/app.b318a6738aa316cdc684.hot-update.js",
+    "/js/app.3b4af1d46c3fde051ff4.hot-update.js": "/js/app.3b4af1d46c3fde051ff4.hot-update.js"
 }
