chore: add database seeders

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,110 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.82c4b12b1a2a5c26b133.hot-update.js": "/js/app.82c4b12b1a2a5c26b133.hot-update.js",
-    "/js/app.25dd69ac3f56157f532d.hot-update.js": "/js/app.25dd69ac3f56157f532d.hot-update.js",
-    "/js/app.5a55ecbf964e3d35d331.hot-update.js": "/js/app.5a55ecbf964e3d35d331.hot-update.js",
-    "/js/app.358c59507dedde91d7fb.hot-update.js": "/js/app.358c59507dedde91d7fb.hot-update.js",
-    "/js/app.2283b3e5b3b72da7b0b0.hot-update.js": "/js/app.2283b3e5b3b72da7b0b0.hot-update.js",
-    "/js/app.05b99568d12a398c2df7.hot-update.js": "/js/app.05b99568d12a398c2df7.hot-update.js",
-    "/js/app.f1441327ff8723461f6d.hot-update.js": "/js/app.f1441327ff8723461f6d.hot-update.js",
-    "/js/app.85a0733d79575aad163f.hot-update.js": "/js/app.85a0733d79575aad163f.hot-update.js",
-    "/js/app.47be72b688fdb6e85195.hot-update.js": "/js/app.47be72b688fdb6e85195.hot-update.js",
-    "/js/app.0521515c988bd8c67cf2.hot-update.js": "/js/app.0521515c988bd8c67cf2.hot-update.js",
-    "/js/app.a60774da4c92bbd79ab8.hot-update.js": "/js/app.a60774da4c92bbd79ab8.hot-update.js",
-    "/js/app.1273aef64f2ba326916d.hot-update.js": "/js/app.1273aef64f2ba326916d.hot-update.js",
-    "/js/app.54dd801130e2682232a7.hot-update.js": "/js/app.54dd801130e2682232a7.hot-update.js",
-    "/js/app.32e6a597a7a63bdec5f0.hot-update.js": "/js/app.32e6a597a7a63bdec5f0.hot-update.js",
-    "/js/app.927be337ff312acff62a.hot-update.js": "/js/app.927be337ff312acff62a.hot-update.js",
-    "/js/app.b871ee6631254c2c6376.hot-update.js": "/js/app.b871ee6631254c2c6376.hot-update.js",
-    "/js/app.97972ab50ff75d961ed7.hot-update.js": "/js/app.97972ab50ff75d961ed7.hot-update.js",
-    "/js/app.dcc1dd53bc22d70f169d.hot-update.js": "/js/app.dcc1dd53bc22d70f169d.hot-update.js",
-    "/js/app.085dbed100e5c19051fc.hot-update.js": "/js/app.085dbed100e5c19051fc.hot-update.js",
-    "/js/app.69636590fadd035edec2.hot-update.js": "/js/app.69636590fadd035edec2.hot-update.js",
-    "/js/app.fa447b1d818097966b2b.hot-update.js": "/js/app.fa447b1d818097966b2b.hot-update.js",
-    "/js/app.0dc756038b6e70097c2f.hot-update.js": "/js/app.0dc756038b6e70097c2f.hot-update.js",
-    "/js/app.cd3a57c73685901dcc10.hot-update.js": "/js/app.cd3a57c73685901dcc10.hot-update.js",
-    "/js/app.1f06baea7f1920a14368.hot-update.js": "/js/app.1f06baea7f1920a14368.hot-update.js",
-    "/js/app.2a9478dd4986f49a8114.hot-update.js": "/js/app.2a9478dd4986f49a8114.hot-update.js",
-    "/js/app.d1ce43109a939fdfae91.hot-update.js": "/js/app.d1ce43109a939fdfae91.hot-update.js",
-    "/js/app.8c910dc66746a53939e3.hot-update.js": "/js/app.8c910dc66746a53939e3.hot-update.js",
-    "/js/app.8eb4877f3e44e56251da.hot-update.js": "/js/app.8eb4877f3e44e56251da.hot-update.js",
-    "/js/app.a3c37b9e3bd47e690ddb.hot-update.js": "/js/app.a3c37b9e3bd47e690ddb.hot-update.js",
-    "/js/app.890eaf29a520974e8e04.hot-update.js": "/js/app.890eaf29a520974e8e04.hot-update.js",
-    "/js/app.109cd7ad9caf6fcf6797.hot-update.js": "/js/app.109cd7ad9caf6fcf6797.hot-update.js",
-    "/js/app.7f7a743d151975fd33b7.hot-update.js": "/js/app.7f7a743d151975fd33b7.hot-update.js",
-    "/js/app.f48bc52f1ac3e0b9ce13.hot-update.js": "/js/app.f48bc52f1ac3e0b9ce13.hot-update.js",
-    "/js/app.d3bff54a579c90272972.hot-update.js": "/js/app.d3bff54a579c90272972.hot-update.js",
-    "/js/app.a3128ae73086dcb814f8.hot-update.js": "/js/app.a3128ae73086dcb814f8.hot-update.js",
-    "/js/app.33d69b4d5502626a5df7.hot-update.js": "/js/app.33d69b4d5502626a5df7.hot-update.js",
-    "/js/app.05fde8d48c1b0b2d1de0.hot-update.js": "/js/app.05fde8d48c1b0b2d1de0.hot-update.js",
-    "/js/app.d51441b945ce35838e3d.hot-update.js": "/js/app.d51441b945ce35838e3d.hot-update.js",
-    "/js/app.5e5725ee0eaefd3a77a0.hot-update.js": "/js/app.5e5725ee0eaefd3a77a0.hot-update.js",
-    "/js/app.fa670bef3f8f4728eff2.hot-update.js": "/js/app.fa670bef3f8f4728eff2.hot-update.js",
-    "/js/app.149c837f4e07bcc8f234.hot-update.js": "/js/app.149c837f4e07bcc8f234.hot-update.js",
-    "/js/app.bcd7908587e33d694958.hot-update.js": "/js/app.bcd7908587e33d694958.hot-update.js",
-    "/js/app.c7f26c847fb6bbd3779f.hot-update.js": "/js/app.c7f26c847fb6bbd3779f.hot-update.js",
-    "/js/app.f2ed57b376c9e3c24f82.hot-update.js": "/js/app.f2ed57b376c9e3c24f82.hot-update.js",
-    "/js/app.846bb4dd48b50636e159.hot-update.js": "/js/app.846bb4dd48b50636e159.hot-update.js",
-    "/js/app.871fb88fa07266211913.hot-update.js": "/js/app.871fb88fa07266211913.hot-update.js",
-    "/js/app.9d1501006c8b99d04595.hot-update.js": "/js/app.9d1501006c8b99d04595.hot-update.js",
-    "/js/app.bca7bad477f9c2136dfc.hot-update.js": "/js/app.bca7bad477f9c2136dfc.hot-update.js",
-    "/js/app.b6c7f7151f03acc69737.hot-update.js": "/js/app.b6c7f7151f03acc69737.hot-update.js",
-    "/js/app.22e47ccea5e7fe77c3e9.hot-update.js": "/js/app.22e47ccea5e7fe77c3e9.hot-update.js",
-    "/js/app.33af7a326e3d281f03c1.hot-update.js": "/js/app.33af7a326e3d281f03c1.hot-update.js",
-    "/js/app.922610df3d82e9d7205d.hot-update.js": "/js/app.922610df3d82e9d7205d.hot-update.js",
-    "/js/app.442472469331cfaa6f33.hot-update.js": "/js/app.442472469331cfaa6f33.hot-update.js",
-    "/js/app.b550adc5d198cae4c168.hot-update.js": "/js/app.b550adc5d198cae4c168.hot-update.js",
-    "/js/app.b0ffda0954289906e11f.hot-update.js": "/js/app.b0ffda0954289906e11f.hot-update.js",
-    "/js/app.fde01d19ba9e9cc0c89e.hot-update.js": "/js/app.fde01d19ba9e9cc0c89e.hot-update.js",
-    "/js/app.4f933eef3d3003049a1a.hot-update.js": "/js/app.4f933eef3d3003049a1a.hot-update.js",
-    "/js/app.f7be4da2c14558a19378.hot-update.js": "/js/app.f7be4da2c14558a19378.hot-update.js",
-    "/js/app.f1c85a40515c08443458.hot-update.js": "/js/app.f1c85a40515c08443458.hot-update.js",
-    "/js/app.7866c9d239e26603c808.hot-update.js": "/js/app.7866c9d239e26603c808.hot-update.js",
-    "/js/app.28c40d3d9f8a0fbb73bb.hot-update.js": "/js/app.28c40d3d9f8a0fbb73bb.hot-update.js",
-    "/js/app.2f5be6e739a110321f3c.hot-update.js": "/js/app.2f5be6e739a110321f3c.hot-update.js",
-    "/js/app.cf94285a9b7ecf2839a6.hot-update.js": "/js/app.cf94285a9b7ecf2839a6.hot-update.js",
-    "/js/app.d8afd3d7eea8e2c28e66.hot-update.js": "/js/app.d8afd3d7eea8e2c28e66.hot-update.js",
-    "/js/app.c152f2ea56f446f74e3c.hot-update.js": "/js/app.c152f2ea56f446f74e3c.hot-update.js",
-    "/js/app.724cb9606761c53c18e7.hot-update.js": "/js/app.724cb9606761c53c18e7.hot-update.js",
-    "/js/app.a3300c42956c051e208a.hot-update.js": "/js/app.a3300c42956c051e208a.hot-update.js",
-    "/js/app.dc8358469322f0867715.hot-update.js": "/js/app.dc8358469322f0867715.hot-update.js",
-    "/js/app.8cf9365709e2ad7c4a08.hot-update.js": "/js/app.8cf9365709e2ad7c4a08.hot-update.js",
-    "/js/app.3cb5edae236f7a8cc7b6.hot-update.js": "/js/app.3cb5edae236f7a8cc7b6.hot-update.js",
-    "/js/app.56d9aff7260bb8905d52.hot-update.js": "/js/app.56d9aff7260bb8905d52.hot-update.js",
-    "/js/app.b5f8baf92a9ddeeb8cfd.hot-update.js": "/js/app.b5f8baf92a9ddeeb8cfd.hot-update.js",
-    "/js/app.962b5fe6b0916bb8c13a.hot-update.js": "/js/app.962b5fe6b0916bb8c13a.hot-update.js",
-    "/js/app.52f0341a0d87190bc4c5.hot-update.js": "/js/app.52f0341a0d87190bc4c5.hot-update.js",
-    "/js/app.dfdaf7649b1642738cf4.hot-update.js": "/js/app.dfdaf7649b1642738cf4.hot-update.js",
-    "/js/app.9a67a95c2ceb9b1b68da.hot-update.js": "/js/app.9a67a95c2ceb9b1b68da.hot-update.js",
-    "/js/app.185ed88d2daad2dfb02b.hot-update.js": "/js/app.185ed88d2daad2dfb02b.hot-update.js",
-    "/js/app.b615120e27c806028dbd.hot-update.js": "/js/app.b615120e27c806028dbd.hot-update.js",
-    "/js/app.c6d78c7ed252cbcf0f9f.hot-update.js": "/js/app.c6d78c7ed252cbcf0f9f.hot-update.js",
-    "/js/app.4eb138e9e766c011b4b0.hot-update.js": "/js/app.4eb138e9e766c011b4b0.hot-update.js",
-    "/js/app.a0ce71d4f6200bb0ce49.hot-update.js": "/js/app.a0ce71d4f6200bb0ce49.hot-update.js",
-    "/js/app.644e7a59c6b126cb7297.hot-update.js": "/js/app.644e7a59c6b126cb7297.hot-update.js",
-    "/js/app.c27fe2514cd226e946a0.hot-update.js": "/js/app.c27fe2514cd226e946a0.hot-update.js",
-    "/js/app.68f74ee97c1c8a841432.hot-update.js": "/js/app.68f74ee97c1c8a841432.hot-update.js",
-    "/js/app.c8b7f3c4b5cfdfe2d70f.hot-update.js": "/js/app.c8b7f3c4b5cfdfe2d70f.hot-update.js",
-    "/js/app.7f04339522b5c6928f2c.hot-update.js": "/js/app.7f04339522b5c6928f2c.hot-update.js",
-    "/js/app.c2b19661aa00cdb52836.hot-update.js": "/js/app.c2b19661aa00cdb52836.hot-update.js",
-    "/js/app.176e5bbfb02e19a8482e.hot-update.js": "/js/app.176e5bbfb02e19a8482e.hot-update.js",
-    "/js/app.2897e2a6a95aa74267b9.hot-update.js": "/js/app.2897e2a6a95aa74267b9.hot-update.js",
-    "/js/app.5579e5dd86ef2c247dc8.hot-update.js": "/js/app.5579e5dd86ef2c247dc8.hot-update.js",
-    "/js/app.1ba8690df54ae1b09288.hot-update.js": "/js/app.1ba8690df54ae1b09288.hot-update.js",
-    "/js/app.6d4ccc20a57675d454e1.hot-update.js": "/js/app.6d4ccc20a57675d454e1.hot-update.js",
-    "/js/app.af27b0e483a5264e6657.hot-update.js": "/js/app.af27b0e483a5264e6657.hot-update.js",
-    "/js/app.f290377f29af219ff421.hot-update.js": "/js/app.f290377f29af219ff421.hot-update.js",
-    "/js/app.378625895d41662bdb1e.hot-update.js": "/js/app.378625895d41662bdb1e.hot-update.js",
-    "/js/app.2ba84309482f5bd386b6.hot-update.js": "/js/app.2ba84309482f5bd386b6.hot-update.js",
-    "/js/app.5d640d788d79b28ccdcc.hot-update.js": "/js/app.5d640d788d79b28ccdcc.hot-update.js",
-    "/js/app.056f3a0e5dfd36477a9f.hot-update.js": "/js/app.056f3a0e5dfd36477a9f.hot-update.js",
-    "/js/app.a913b7e1e2cbb13a5648.hot-update.js": "/js/app.a913b7e1e2cbb13a5648.hot-update.js",
-    "/js/app.a90ff52f54f165f5e7de.hot-update.js": "/js/app.a90ff52f54f165f5e7de.hot-update.js",
-    "/js/app.0ca63a802db186ada48f.hot-update.js": "/js/app.0ca63a802db186ada48f.hot-update.js",
-    "/js/app.ed233daf715758011f34.hot-update.js": "/js/app.ed233daf715758011f34.hot-update.js",
-    "/js/app.67fdf64cac41e346ce29.hot-update.js": "/js/app.67fdf64cac41e346ce29.hot-update.js",
-    "/js/app.454e11e92e47002f22be.hot-update.js": "/js/app.454e11e92e47002f22be.hot-update.js",
-    "/js/app.b318a6738aa316cdc684.hot-update.js": "/js/app.b318a6738aa316cdc684.hot-update.js",
-    "/js/app.3b4af1d46c3fde051ff4.hot-update.js": "/js/app.3b4af1d46c3fde051ff4.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
