refactor: convert Fields to API controller

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/app.dec48dfc01379195eb78.hot-update.js": "/js/app.dec48dfc01379195eb78.hot-update.js"
+    "/js/app.dec48dfc01379195eb78.hot-update.js": "/js/app.dec48dfc01379195eb78.hot-update.js",
+    "/js/app.ba73c7708e8cc0844fee.hot-update.js": "/js/app.ba73c7708e8cc0844fee.hot-update.js"
 }
