fix: fix field values on edit subscriber form

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -66,5 +66,7 @@
     "/js/app.40846f64e7e4f9daf955.hot-update.js": "/js/app.40846f64e7e4f9daf955.hot-update.js",
     "/js/app.c1ee1558e08e481233df.hot-update.js": "/js/app.c1ee1558e08e481233df.hot-update.js",
     "/js/app.2eeaacd6999cc19abaea.hot-update.js": "/js/app.2eeaacd6999cc19abaea.hot-update.js",
-    "/js/app.a7d165de661d5ac5563c.hot-update.js": "/js/app.a7d165de661d5ac5563c.hot-update.js"
+    "/js/app.a7d165de661d5ac5563c.hot-update.js": "/js/app.a7d165de661d5ac5563c.hot-update.js",
+    "/js/app.8ec2f63a328e938a47b7.hot-update.js": "/js/app.8ec2f63a328e938a47b7.hot-update.js",
+    "/js/app.957c9901ed0a32abb9ab.hot-update.js": "/js/app.957c9901ed0a32abb9ab.hot-update.js"
 }
