feat: add fully functioning edit subscriber form

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -68,5 +68,14 @@
     "/js/app.2eeaacd6999cc19abaea.hot-update.js": "/js/app.2eeaacd6999cc19abaea.hot-update.js",
     "/js/app.a7d165de661d5ac5563c.hot-update.js": "/js/app.a7d165de661d5ac5563c.hot-update.js",
     "/js/app.8ec2f63a328e938a47b7.hot-update.js": "/js/app.8ec2f63a328e938a47b7.hot-update.js",
-    "/js/app.957c9901ed0a32abb9ab.hot-update.js": "/js/app.957c9901ed0a32abb9ab.hot-update.js"
+    "/js/app.957c9901ed0a32abb9ab.hot-update.js": "/js/app.957c9901ed0a32abb9ab.hot-update.js",
+    "/js/app.aff72b1eb406537e8f8e.hot-update.js": "/js/app.aff72b1eb406537e8f8e.hot-update.js",
+    "/js/app.7f568c9218e9e62459ab.hot-update.js": "/js/app.7f568c9218e9e62459ab.hot-update.js",
+    "/js/app.14215b65c42058ea29cc.hot-update.js": "/js/app.14215b65c42058ea29cc.hot-update.js",
+    "/js/app.90a9f75cb09fb48ec84c.hot-update.js": "/js/app.90a9f75cb09fb48ec84c.hot-update.js",
+    "/js/app.5b829e658e7b71904990.hot-update.js": "/js/app.5b829e658e7b71904990.hot-update.js",
+    "/js/app.46c22e6687ac2677fcb2.hot-update.js": "/js/app.46c22e6687ac2677fcb2.hot-update.js",
+    "/js/app.f47e5c6dee586558013c.hot-update.js": "/js/app.f47e5c6dee586558013c.hot-update.js",
+    "/js/app.a0152c677299a305a8f9.hot-update.js": "/js/app.a0152c677299a305a8f9.hot-update.js",
+    "/js/app.baffbc99c01b1d18b6f9.hot-update.js": "/js/app.baffbc99c01b1d18b6f9.hot-update.js"
 }
