feat: finish full Field controller

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -77,5 +77,8 @@
     "/js/app.46c22e6687ac2677fcb2.hot-update.js": "/js/app.46c22e6687ac2677fcb2.hot-update.js",
     "/js/app.f47e5c6dee586558013c.hot-update.js": "/js/app.f47e5c6dee586558013c.hot-update.js",
     "/js/app.a0152c677299a305a8f9.hot-update.js": "/js/app.a0152c677299a305a8f9.hot-update.js",
-    "/js/app.baffbc99c01b1d18b6f9.hot-update.js": "/js/app.baffbc99c01b1d18b6f9.hot-update.js"
+    "/js/app.baffbc99c01b1d18b6f9.hot-update.js": "/js/app.baffbc99c01b1d18b6f9.hot-update.js",
+    "/js/app.bb53c4b992a4b5aa1da7.hot-update.js": "/js/app.bb53c4b992a4b5aa1da7.hot-update.js",
+    "/js/app.ca832024f4403a88c4fb.hot-update.js": "/js/app.ca832024f4403a88c4fb.hot-update.js",
+    "/js/app.c6254d14003ee61546fe.hot-update.js": "/js/app.c6254d14003ee61546fe.hot-update.js"
 }
